# proxy-chunks-minimal-example

./: .gitignore  README.md
large_contract/: Forc.toml  fuel-toolchain.toml
large_contract/src/: main.sw
programs/: Forc.toml
programs/call_proxy_script/: Forc.toml
programs/call_proxy_script/src/: main.sw
programs/large_contract/: Forc.toml
programs/large_contract/src/: main.sw
programs/large_contract_interface/: Forc.toml
programs/large_contract_interface/src/: main.sw
programs/proxy_call_script/: Cargo.toml  README.md
programs/proxy_call_script/src/: proxy_call.rs
programs/proxy_call_scripts/: Cargo.toml  README.md
programs/proxy_call_scripts/src/: get_target_version.rs  pause_target.rs  unpause_target.rs  utils.rs
programs/simple_contract/: Forc.toml
programs/simple_contract/src/: main.sw
